--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,6 +1,6 @@
-@import "reset";
-@import "variable";
-@import "index";
+@import "bootstrap/bootstrap.scss";
+@import "_variable.scss";
+@import "_index.scss";
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
